--- a/src/assets/home.css
+++ b/src/assets/home.css
@@ -17,3 +17,15 @@
     justify-content: center;
     margin-top: 5em;
 }
+
+.status {
+
+    color: green;
+
+}
+
+.spaceThing {
+
+    font-weight: 900;
+
+}
